# anishaSidWhatsapp

./: .env.example  .gitignore  README.md
docs/: HANDOFF.md
docs/superpowers/plans/: 2026-05-26-anisha-and-sid-impl.md
docs/superpowers/specs/: 2026-05-26-anisha-and-sid-design.md
pipeline/: pyproject.toml  run.py
pipeline/lib/: cache.py  cost.py  gazetteer.py  parser.py  paths.py
pipeline/stages/: s0_parse.py  s1_stats.py  s2_firsts.py  s3_candidates.py  s4_cluster.py  s5_curate.py  s_chapters.py  s_chapters_emit_mdx.py  s_nlp.py
pipeline/tests/: test_parser.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.ts
site/src/components/: HourHeatmap.tsx  PaperCard.astro
site/src/content/: config.ts
site/src/content/chapters/: 00-mock.mdx  01-kuch-abhi-baat.mdx  02-nahi-like-time.mdx  03-nahi-what-kuch.mdx  04-what-kuch-abhi.mdx  05-kuch-bata-abhi.mdx  06-nahi-what-kuch.mdx  07-what-nahi-kuch.mdx  08-what-nahi-kuch.mdx  09-abhi-nahi-kuch.mdx  10-abhi-what-acha.mdx  11-what-abhi-arre.mdx  12-what-kuch-just.mdx  13-what-know-like.mdx  14-what-kuch-anisha.mdx  15-love-what-abhi.mdx  16-love-call-babyyy.mdx  17-love-call-babyyy.mdx  18-love-call-babyyy.mdx  19-call-love-baby.mdx  20-call-baby-love.mdx  21-call-baby-video.mdx  22-call-video-love.mdx
site/src/data/: chapter_seed.json  firsts.json  stats.json
site/src/layouts/: BookLayout.astro
site/src/pages/: firsts.astro  index.astro  stats.astro
site/src/pages/book/: [...slug].astro  index.astro
site/src/styles/: globals.css
