[project]
name = "pipeline"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "polars>=1.20.0",
  "pyarrow>=18.0.0",
  "emoji>=2.14.0",
  "regex>=2024.11.6",
  "tqdm>=4.66.0",
  "python-dateutil>=2.9.0",
  "anthropic>=0.42.0",
  "numpy>=1.26.0",
  "rich>=13.9.0"
]

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
